Правка после автоматической проверки

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="icon" href="icons/favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="icon" type="image/png" href="images/favicon.png">
   </head>
   <body>
@@ -40,14 +40,14 @@
                 <div class="popover-content">
                   <div class="popover-content-item basket-item">
                     <a href="#" class="basket-item-description">
-                      <img src="images/product-amateur-selfie-stick.jpg" alt="Любительская селфи-палка.">
+                      <img src="images/product-amateur-selfie-stick.jpg" width="39" height="43" alt="Любительская селфи-палка.">
                       <span>Любительская селфи-палка</span>
                     </a>
                     <button class="basket-item-close" type="button"></button>
                   </div>
                   <div class="popover-content-item basket-item">
                     <a href="#" class="basket-item-description">
-                      <img src="images/product-professional-selfie-stick.jpg" alt="Профессиональная селфи-палка.">
+                      <img src="images/product-professional-selfie-stick.jpg" width="39" height="43" alt="Профессиональная селфи-палка.">
                       <span>Профессиональная селфи-палка</span>
                     </a>
                     <button class="basket-item-close" type="button"></button>
@@ -363,7 +363,7 @@
       </div>
     </footer>
 <!-- modal-window -->
-    <div class="delivery-modal-wrapper modal-closed">
+    <div class="delivery-modal-wrapper">
       <div class="delivery-modal">
         <div class="delivery-modal-header">
           <span class="delivery-modal-header-title">Доставка под заказ</span>
@@ -394,11 +394,11 @@
             </div>
             <div class="counter-wrapper error">
               <button class="counter-button counter-minus" type="button">
-                <img src="images/icon-minus.svg" alt="Минус.">
+                <span class="minus-icon"></span>
               </button>
               <input class="counter-number" type="number" value="1">
               <button class="counter-button counter-plus" type="button">
-                <img src="images/icon-plus.svg" alt="Плюс.">
+                <span class="plus-icon"></span>
               </button>
             </div>
           </div>
