Доработки после ревью

--- a/index.html
+++ b/index.html
@@ -402,19 +402,19 @@
         </div>
       </section>
       <button class="delivery-section wrapper" type="button">
-        <span class="delivery-icon-wrapper">
-          <span class="delivery-icon">
-            <span class="visually-hidden">Доставка товаров под заказ.</span>
-          </span>
+        <span class="delivery-icon">
+          <span class="visually-hidden">Доставка товаров под заказ.</span>
         </span>
         <span class="delivery-section-item">Доставим редкий товар под заказ</span>
-        <span class="delivery-notice-wrapper">
-          <span class="delivery-notice"></span>
+        <span class="delivery-notice">
+          <span class="visually-hidden">
+            Информация о доставке.
+          </span>
         </span>
       </button>
       <section class="section-contact wrapper">
         <div class="contacts">
-          <div class="line"></div>
+          <div class="contacts-line"></div>
           <h2 class="main-title contact-title">О нас</h2>
           <p class="text contacts-text">
             Огромный выбор гаджетов не оставит равнодушным гика, который есть в
@@ -432,7 +432,7 @@
           <a class="main-button button section-contact-button" href="#">Подробнее о нас</a>
         </div>
         <div class="contacts">
-          <div class="line"></div>
+          <div class="contacts-line"></div>
           <h2 class="main-title">Контакты</h2>
           <p class="text contacts-text">
             Вы можете забрать товар сами, заехав в наш офис. Заодно сможете
@@ -590,7 +590,7 @@
             </div>
             <div class="counter-wrapper error">
               <button class="counter-button counter-minus" type="button">
-                <span class="visually-hidden"> Уменьшит кол-во товара. </span>
+                <span class="visually-hidden"> Уменьшить кол-во товара. </span>
               </button>
               <input class="counter-number" type="number" value="1" />
               <button class="counter-button counter-plus" type="button">
