Доработки после ревью

--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
                     />
                     <span>Любительская селфи-палка</span>
                   </a>
-                  <button class="basket-item-close" type="button"></button>
+                  <button class="basket-item-close" type="button">
+                    <span class="visually-hidden">
+                      Удалить товар.
+                    </span>
+                  </button>
                 </div>
                 <div class="popover-content-item basket-item">
                   <a href="#" class="basket-item-description">
@@ -73,7 +77,11 @@
                     />
                     <span>Профессиональная селфи-палка</span>
                   </a>
-                  <button class="basket-item-close" type="button"></button>
+                  <button class="basket-item-close" type="button">
+                    <span class="visually-hidden">
+                      Удалить товар.
+                    </span>
+                  </button>
                 </div>
                 <div class="popover-content-result">
                   <span>Товаров: 2</span>
